--- a/site/style.css
+++ b/site/style.css
@@ -26,6 +26,19 @@ nav{
 
 #logo img{
     height: 8vh;
+    margin-right: 10px;
+}
+#logo {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 20%;
+}
+#logo p{
+    text-decoration: none;
+    letter-spacing: 3px;
+    color: rgb(236, 111, 27);
+    font-weight: bold;
 }
 .nav-links {
     display: flex;
@@ -77,7 +90,6 @@ nav{
     padding: 8px;
     text-decoration: none;
     font-size: 4vh;
-    color: rgb(236, 111, 27);
     display: block;
     transition: 0.4s;
     letter-spacing: 3px;
@@ -99,6 +111,170 @@ nav{
 }
 
 
+
+.tagline{
+    color: ivory;
+    font-family: 'Oswald', sans-serif;
+    font-size: 4vh;
+    text-align: center;
+    letter-spacing: 2px;
+    background-color: rgba(39, 43, 43, 0.801);
+    padding: 20px;
+}
+
+
+
+
+.content{
+    background-color: rgb(0, 0, 0);
+    width: 90%;
+    margin: auto;
+    padding: 40px;
+}
+
+.content p{
+    color: ivory;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2vh;
+    text-align: center;
+}
+#middlesub{
+    text-align: center;
+    color: rgb(236, 111, 27);
+    font-weight: bold;    
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 4vh;
+    letter-spacing: 4px;
+}
+
+#small-sub{
+    text-align: center;
+    color: rgb(236, 111, 27);
+    font-weight: bold;    
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 2vh;
+    letter-spacing: 4px;
+}
+
+hr{
+    width: 50%;
+    border: 2px solid rgb(236, 111, 27) ;
+    margin: auto;
+    text-align: center;
+}
+.content div{
+    margin: 40px;
+}
+.fade-in{
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+}
+
+.fade-in.appear{
+    opacity: 1;
+}
+
+.ranges{
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+}
+.ranges img{
+    width: 100px;
+    margin: 10px;
+}
+.intro{
+    align-items: center;
+    text-align: center;
+}
+#myBtn{
+    background-color: rgb(100, 15, 15);
+    padding: 5px;
+    border-radius: 20px;
+    border-color: rgb(236, 111, 27);
+    color: rgb(236, 111, 27);
+    font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
+    margin: 20px
+}
+
+
+
+
+
+
+footer{
+    
+    display: flex;
+    flex-flow: row wrap;
+    padding: 50px;
+    background-color: rgb(100, 15, 15);
+}
+.footer div{
+    margin-top: 20px;
+}
+.footer #footer-name p{
+    text-align: center;
+    margin-bottom: 10px;
+    color: rgb(236, 111, 27);
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 3vh;
+    letter-spacing: 4px;
+
+}
+footer img{
+    height: 10vh;
+}
+
+.footer >*{
+    flex: 1 100%;
+    text-align: center;
+}
+
+.footer-left{
+    margin-right: 1.25em;
+    margin-bottom: 2em;
+}
+.footer-subs{
+    color: rgb(236, 111, 27);
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 2vh;
+    letter-spacing: 3px;
+}
+.footer ul{
+    list-style: none;
+}
+.footer a{
+    text-decoration: none;
+}
+.footer-right{
+    display: flex;
+    flex-flow: row wrap;
+}
+.footer-right >*{
+    flex: 1 50%;
+    margin-right: 6px;
+}
+.footer-bottom{
+    text-align: center;
+    padding-top: 50px;
+}
+.footer p,ul,a{
+    color: ivory;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+    font-size: 1.5vh;
+}
+
+.social a:hover{
+    color: rgb(255, 94, 0);
+}
 @media screen and (max-width:768px){
     .nav-links{
         display: none;
@@ -106,5 +282,17 @@ nav{
     }
     .burger{
         display: block;
+    }
+}
+
+@media screen and (min-width: 769px){
+    .footer-right >*{
+        flex: 1;
+    }
+    .footer-left{
+        flex: 1 0px;
+    }
+    .footer-right{
+        flex: 2 0px;
     }
 }
