--- a/site/style2.css
+++ b/site/style2.css
@@ -67,11 +67,11 @@ section .container .contactForm .formBox{
     position: relative;
     display: flex;
 }
-section .container .contactForm .w50{
+.w50{
     float: left;
-    margin-right: 10px;
+    margin-right: 15px;
 }
-section .container .contactForm .w100{
+.w100{
     clear: both;
 }
 section .container .contactForm #myBtn{
