--- a/site/style.css
+++ b/site/style.css
@@ -126,7 +126,7 @@ nav{
 
 
 .content{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     width: 90%;
     margin: auto;
     padding: 40px;
@@ -137,6 +137,7 @@ nav{
     font-family: 'Open Sans', sans-serif;
     font-size: 1.7vh;
     text-align: center;
+    margin-bottom: 20px;
 }
 #middlesub{
     text-align: center;
@@ -146,6 +147,7 @@ nav{
     text-transform: uppercase;
     font-size: 4vh;
     letter-spacing: 4px;
+    margin-bottom: 20px;
 }
 
 #small-sub{
@@ -156,6 +158,7 @@ nav{
     text-transform: uppercase;
     font-size: 2vh;
     letter-spacing: 4px;
+    margin-bottom: 10px;
 }
 
 hr{
@@ -201,6 +204,12 @@ hr{
     cursor: pointer;
     margin: 20px;
     font-size: 12pt;
+}
+.content iframe{
+    width: 60%;
+    max-height: 300px;
+    margin: 20px;
+    box-shadow: 0 20px 20px rgba(109, 109, 109, 0.5);
 }
 
 
@@ -275,6 +284,10 @@ footer img{
 
 #sbtn:hover{
     color: rgb(255, 94, 0);
+}
+#sbtn{
+    margin-bottom: 10px;
+    text-decoration: none;
 }
 
 
