--- a/site/style.css
+++ b/site/style.css
@@ -11,6 +11,7 @@ body{
     align-items: center;
     background: url("img/back.jpg") no-repeat fixed;
     background-size: cover;
+    user-select: none;
 }
 
 nav{
