--- a/site/style.css
+++ b/site/style.css
@@ -148,6 +148,7 @@ nav{
     text-transform: uppercase;
     font-size: 4vh;
     letter-spacing: 4px;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -158,8 +159,9 @@ nav{
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     font-size: 2vh;
-    letter-spacing: 4px;
-    margin-bottom: 10px;
+    letter-spacing: 2px;
+    margin-top: 10px;
+    margin-bottom:  10px;
 }
 
 hr{
